src/test/ui/extern/extern-main-fn.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/extern-main-fn.rs:1:1
   |
LL | extern "C" fn main() {}
   | ^^^^^^^^^^^^^^^^^^^^ expected "Rust" fn, found "C" fn
   |
   = note: expected fn pointer `fn()`
              found fn pointer `extern "C" fn()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0580`.
