src/test/ui/extern/extern-main-fn.rs
extern "C" fn main() {} //~ ERROR: `main` function has wrong type [E0580]
